--- a/compose-templates-development.yaml
+++ b/compose-templates-development.yaml
@@ -1,10 +1,11 @@
-version: "3"
+version: 3
+
 services:
   template-py-rest-microservice:
     image: pyresttemplate
     ports:
       - 8000:8000
-  template-py-rest-microservice:
+  template-node-rest-microservice:
     image: noderesttemplate
     ports:
       - 9000:9000
@@ -20,3 +21,13 @@ services:
     image: uiremoteapptemplate2
     ports:
       - 5002:5002
+  zookeeper:
+    container_name: bitnami_zookeeper
+    image: bitnami/zookeeper:latest
+    ports:
+      - 2181:2181
+  kafka:
+    container_name: bitnami_kafka
+    image: bitnami/kafka
+    ports:
+      - 9092:9092
